# intro_to_llms

./: .gitignore  README.md  pyproject.toml
intro_to_llms/: 01_local_model_vllm.ipynb  02_few_shot_prompting.ipynb  03_local_rag_qa.ipynb  03_local_rag_qa_up.ipynb  03_local_rag_qa_updated.ipynb  1_langgraph_connect_llm.ipynb  2_langgraph_our_calculator_agent.ipynb
intro_to_llms/solutions/: 01_local_model_vllm.ipynb  02_few_shot_prompting.ipynb  03_local_rag_qa.ipynb  1_langgraph_connect_llm.ipynb  2_langgraph_our_calculator_agent.ipynb
