[tool.poetry]
name = "intro-to-llms"
version = "0.1.0"
description = ""
authors = ["Juan Huguet <juan.huguet@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_to_llms"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
