[tool.poetry]
name = "intro-to-llms"
version = "0.1.0"
description = ""
authors = ["Juan Huguet <juan.huguet@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_to_llms"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.1.50"
langchain-community = "^0.0.36"
pypdf = "^4.2.0"
sentence-transformers = "^2.7.0"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
